# scope-guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  openclaw.plugin.json  package.json  pyproject.toml  scope-boundary.schema.json  tsconfig.json
.claude-plugin/: plugin.json
.claude/skills/preflight/: SKILL.md
.claude/skills/scope-guard/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
archive/: ANTI_PATTERNS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  FAQ.md  Makefile  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.md  ROADMAP.md  SECURITY.md  SPEC.md
archive/docs/: ADOPTION_GUIDE.md  ARCHITECTURE.md  REPO_OVERVIEW.md
archive/examples_old/: INDEX.md  action-preview-result.json  blocked-action-result.json  coding-handoff.json  document-result.json  email-draft-handoff.json  memo-draft-handoff.json  partial-document-result.json  research-handoff.json
archive/scripts/: validate_examples.py
archive/shared/: downstream-result.schema.json  task-contract.schema.json  terminology.md
archive/skills/action-adapter/: SKILL.md
archive/skills/coding-adapter/: SKILL.md
archive/skills/delegation-protocol/: SKILL.md
archive/skills/document-adapter/: SKILL.md
archive/skills/guardrail-policy/: SKILL.md
archive/skills/research-adapter/: SKILL.md
examples/: scope-boundary-bugfix.json  scope-boundary-deploy.json  scope-boundary-refactor.json
hooks/: hooks.json  pre_tool_use.sh
plugin/: openclaw.plugin.json  package.json  tsconfig.json
plugin/skills/preflight/: SKILL.md
plugin/skills/scope-guard/: SKILL.md
plugin/src/: audit.ts  index.ts  risk.ts  scope.ts
scripts/: package-smoke.mjs
skills/scope-guard/: SKILL.md
src/: audit.ts  checker.ts  cli.ts  content.ts  hook-post.ts  hook.ts  index.ts  init.ts  output-filter.ts  policy.ts  risk.ts  runtime.ts  scope.ts  test.ts
src/preflight/: __init__.py  audit.py  checker.py  cli.py  risk.py  scope.py
src/scope_guard/: __init__.py  audit.py  checker.py  cli.py  risk.py  scope.py
tests/: test_audit.py  test_checker.py  test_risk.py  test_scope.py
(+3 files in other folders)
