[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preflight-scope"
version = "0.1.0"
description = "Scope guard for agentic AI systems. Prevents scope drift, enforces risk-based approval gates, and surfaces hidden assumptions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Work Contract OS Contributors" },
]
keywords = ["agent", "ai", "scope", "guard", "claude", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
preflight = "preflight.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/preflight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
